# MantaS

Device/Datesheet/: readme.txt
Device/Main_Device_fish/: Battery_read.py  Battery_read_all.py  DVL_IMU_read.py  IO_control_pub.py  IO_control_sub.py  PropellerTest.py  Warmdepth_high_read.py  data_log.csv  readme.txt  ros_warmdepth.py
Device/Main_Device_fish/cpp/: bms.cpp  modbus_reader  warmdepth.cpp
Device/Repeater/: CTD_test.py  Sensor_Do_read.py  readme.txt
MUST_Backup/FIsh/: 1bashrc.txt  Battery_read.service  Depth_sensor.service  IO_sub_protect.service
MUST_Backup/FIsh/Dayu_Scripts/: Control_Final.sh  Depth_sensor.sh  IO_sub_protect.sh  Loushui_IO.sh  body_status_data_log.csv
MUST_Backup/Rep/: 1bashrc.txt  IO_zhongji.service  Tuogou_sub.service  loushui.service
MUST_Backup/Rep/Dayu_Scripts/: IO_zhongji.sh
Ros_Fish/: Actuatordata.csv  DVL_data.csv  altitude_data_log.csv  battery_data_log.csv  body_status_data_log.csv  depth_data_log.csv
Ros_Fish/devel/: .catkin  local_setup.sh  setup.sh
Ros_Fish/devel/include/motion_control/: MotorCommandMsg.h  PropellerCommandMsg.h
Ros_Fish/devel/include/sensor_fish/: BatteryStatus.h  DVLData.h  Warmdepth.h
Ros_Fish/devel/lib/motion_control/: ActuationControl_protect.py  IO_sub.py  IO_sub_protect.py
Ros_Fish/devel/lib/pkgconfig/: motion_control.pc  sensor_fish.pc
Ros_Fish/devel/lib/sensor_fish/: Battery_read.py  Loushui_IO.py
Ros_Fish/devel/share/motion_control/cmake/: motion_control-msg-paths.cmake  motion_controlConfig.cmake
Ros_Fish/devel/share/sensor_fish/cmake/: sensor_fish-msg-extras.cmake  sensor_fish-msg-paths.cmake  sensor_fishConfig.cmake
Ros_Fish/src/motion_control/: CMakeLists.txt  package.xml
Ros_Fish/src/motion_control/scripts/: Control_Final.py  Control_Final_ORIGIN.py  IO_sub_protect.py  check_ethernet.py  depth_control_algorithm.py  pd_depth_control_node.py
Ros_Fish/src/motion_control/scripts/src_RecyleBin/: shuchuan_receive_test.py
Ros_Fish/src/motion_control/scripts/src_Test/: Motor_test.py
Ros_Fish/src/sensor_fish/: CMakeLists.txt
Ros_Fish/src/sensor_fish/launch/: start_simulation.launch
Ros_Fish/src/sensor_fish/msg/: BatteryStatus.msg  DVLData.msg  Warmdepth.msg
Ros_Fish/src/sensor_fish/scripts/: Battery_read.py  DVL_data.csv  Depth_High_Combine.py  Depth_sensor.py  High_sensor.py  Loushui_IO.py  altitude_data_log.csv  body_status_data_log.csv
Ros_Fish/┐к╗·╫╘╞Ї╢п/: ActuationControl_protect.service  ActuationControl_protect.sh  Hight_sensor.service  Loushui_IO.service  actuation_control.service  motor_protect.sh  readme.md
Ros_Fish/开机自启动/: readme.md
Ros_Loco/devel/: .catkin  .rosinstall
Ros_Loco/devel/include/manta/: CommandMsg.h  MotorCommandMsg.h  PropellerCommandMsg.h  Warmdepth.h
Ros_Loco/devel/lib/manta/: Depth_high_pub.py  Pub_Motion.py  Sub_Warmdepth.py
Ros_Loco/devel/lib/pkgconfig/: manta.pc
Ros_Loco/src/manta/: CMakeLists.txt
Ros_Loco/src/manta/config/: config1.json  config2.json  config3.json  config4.json  config5.json  config6.json  config7.json  config8.json  config9.json  readme.md
Ros_Loco/src/manta/msg/: CommandMsg.msg
Ros_Loco/src/manta/scripts/: Deepth_pub copy.py  Depth_high_pub copy.py  Depth_high_pub.py  Heading_pub.py  IO_dayu.py  IO_zhongji.py  Pub_Huxiji.py  Pub_Motion.py  Pub_Motion_2.py  Pub_Tuogou.py
Ros_Loco/src/manta/scripts/src_RecyleBin/: shuchuan_control.py  shucuan_receive_test.py
Ros_Loco/src/manta/scripts/src_test/: Sub_Depth.py  Sub_Warmdepth.py
Ros_Repeater/: ctd_value.csv  do_values.csv  jet_01_tuogou.py  jet_02_suqi.py
Ros_Repeater/auto_start/: CTD_sensor copy.sh  CTD_sensor.service  DVL_sensor.sh  Depth_sensor.sh  IO_protect.sh  PH_sensor.service  Tuogou_sub.sh  loushui.sh
Ros_Repeater/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Ros_Repeater/devel/include/sensor_repeater/: CTD.h
Ros_Repeater/devel/lib/motion/: Tuogou_sub.py
Ros_Repeater/devel/lib/pkgconfig/: sensor_repeater.pc
Ros_Repeater/devel/lib/sensor_repeater/: CTD_sensor.py  PH_sensor.py
Ros_Repeater/src/: ctd_value.csv  do_values.csv
Ros_Repeater/src/motion/: CMakeLists.txt  package.xml
Ros_Repeater/src/motion/launch/: motion.launch
Ros_Repeater/src/motion/scripts/: IO_zhongji.py  Motor_class.py  Motor_class_ORGIN.py  Tuogou_sub.py  loushui.py
Ros_Repeater/src/sensor_repeater/: CMakeLists.txt  package.xml
Ros_Repeater/src/sensor_repeater/msg/: CTD.msg
Ros_Repeater/src/sensor_repeater/scripts/: CTD_sensor.py  Do_sensor.py  PH_sensor.py  pH_sensor_linux.py
Ros_Repeater/┐к╗·╫╘╞Ї╢пre/: Do_sensor.service  Do_sensor.sh  PH_sensor.sh
Ros_Repeater/开机自启动re/: CTD_sensor.sh  Hight_sensor.sh  IO_node.service  IO_zhongji.service
Visualize_Ui_RosWeb/: send_custom_message.html  test_turtle.html
handbook/: readme.md
utlis/: check_ethernet.py  delet.py  sensor.xml
utlis/can_ping/: CMakeLists.txt
utlis/utlis/: can_hub.py
utlis/utlis/ubuntu/motion/: 1_combine.py  bodongqi_all_config.py  bongdongqi.py  check_ethernet.py  propeller.py  propeller_all_config.py
装机必备/装机必备/FIsh/: ControlFinal.service  DVL_sensor.service  motor_control.service
装机必备/装机必备/FIsh/Dayu_Scripts/: Battery_read.sh
(+74 files in other folders)
